# SpatialCL

./: MANIFEST.in  README.md  pyproject.toml  train.py
check_point/: save_point.py
ddp/: dist_util.py  env.py  parse.py
model/: vit.py
split/disco/: __init__.py  clearn.py  uncertainty.py  uwcl.py
split/disco/config/: __init__.py
split/disco/dto/: __init__.py  config.py  image_label_dto.py  mask.py
split/thermal/: augmentor.py
split/utils/: __init__.py
src/spatialcl/: clearn.py  uncertainty.py  uwcl.py
src/spatialcl/_config/: parameter.yaml
src/spatialcl/_dto/: config.py
test/: uwcl_test.py
utils/: dataloader.py  scheduler.py
